added a title in the header

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
 <head>
 
-  <title> CV - Grégoire Bessagnet</title>
+<title> CV - Grégoire Bessagnet</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
-  <div id="header"></div>
+  <div id="header">
+        <h1>CV de Grégoire Bessagnet</h1>
+  </div>
 
   <div id="container">
 
     <div id="left-box">
+
+
 
     </div>
 
