--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="left-box">
 
-      <img src="profile_pic.jpg" alt="Grégoire Bessagnet">
+      <img src="profile_pic.jpg" width="25%" alt="Grégoire Bessagnet">
 
     </div>
 
