add about me section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <div id="left-box">
 
       <img src="profile_pic.jpg" width="25%" alt="Grégoire Bessagnet">
+      <h2>Qui suis-je</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi accusamus officia 
+        temporibus blanditiis tenetur ad hic consequatur dolorum repellendus harum? 
+        Libero impedit quaerat voluptatibus blanditiis dolorem ullam voluptate dolore 
+        similique?</p>
 
     </div>
 
