add the adress infos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         temporibus blanditiis tenetur ad hic consequatur dolorum repellendus harum? 
         Libero impedit quaerat voluptatibus blanditiis dolorem ullam voluptate dolore 
         similique?</p>
+      <ul>
+        <li>Tél : 00.00.00.00.00</li>
+        <li>Mail : greg@greg.co</li>
+        <li>Adresse : 66 rue des Morts / Bordeaux</li>
+      </ul>
 
     </div>
 
