add languages and emojis on about section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
       </ul>
 
       <ul>
-        <li></li>
-        <li></li>
+      <ul>
+        <li>Tél : 00.00.00.00.00</li>
+        <li>Mail : greg@greg.co</li>
+        <li>Adresse : 66 rue des Morts / Bordeaux</li>
+      </ul>
+
+      <ul>
+        <li>🇬🇧 Anglais : Confirmé</li>
+        <li>🇪🇸 Espagnol : intermédiaire</li>
+        <li>🇫🇷 Français : Natif</li>
       </ul>
 
     </div>
