add loisirs to about section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <li>🇫🇷 Français : Natif</li>
       </ul>
 
+      <ul>
+        <li>Sérigraphie</li>
+        <li>Musique (Trombone)</li>
+        <li>Bénévolat associatif</li>
+      </ul>
+
     </div>
 
     <div id="right-box">
