add h3 titles for about section

--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
         temporibus blanditiis tenetur ad hic consequatur dolorum repellendus harum? 
         Libero impedit quaerat voluptatibus blanditiis dolorem ullam voluptate dolore 
         similique?</p>
+      <h3>Adresse</h3>
       <ul>
         <li>Tél : 00.00.00.00.00</li>
         <li>Mail : greg@greg.co</li>
         <li>Adresse : 66 rue des Morts / Bordeaux</li>
       </ul>
-
+      <h3>Langues</h3>
       <ul>
         <li>🇬🇧 Anglais : Confirmé</li>
         <li>🇪🇸 Espagnol : intermédiaire</li>
         <li>🇫🇷 Français : Natif</li>
       </ul>
-
+      <h3>Loisirs</h3>
       <ul>
         <li>Sérigraphie</li>
         <li>Musique (Trombone)</li>
