add my skills title in h2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title> CV - Grégoire Bessagnet</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
+
 </head>
 <body>
   <div id="header">
@@ -43,6 +44,7 @@
 
     <div id="right-box">
       <div id="experiences-box">
+          <h2>Mes expériences</h2>
           <div class="experience"></div>
           <div class="experience"></div>
           <div class="experience"></div>
