add skill section text

--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
           <h2>Mes expériences</h2>
           <div class="experience">
             <h4>Titre professionnel</h4>
-            <p></p>
+            <p>Neque porro quisquam est qui dolorem ipsum quia 
+              dolor sit amet, consectetur, adipisci velit...</p>
           </div>
           <div class="experience">
             <h4>Titre professionnel</h4>
-            <p></p>
+            <p>Neque porro quisquam est qui dolorem ipsum quia 
+              dolor sit amet, consectetur, adipisci velit...</p>
           </div>
           <div class="experience">
             <h4>Titre professionnel</h4>
-            <p></p>
+            <p>Neque porro quisquam est qui dolorem ipsum quia 
+              dolor sit amet, consectetur, adipisci velit...</p>
           </div>
       </div>
       <div id="studies-box">
