add h2 title my studies to studies section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           </div>
       </div>
       <div id="studies-box">
+        <h2>Mes études</h2>
           <div class="study"></div>
           <div class="study"></div>
           <div class="study"></div>
