complete studies section with title of school and lorem ipsum on dexription

--- a/index.html
+++ b/index.html
@@ -63,9 +63,22 @@
       </div>
       <div id="studies-box">
         <h2>Mes études</h2>
-          <div class="study"></div>
-          <div class="study"></div>
-          <div class="study"></div>
+          <div class="study">
+            <h4>Ecole</h4>
+            <p>Neque porro quisquam est qui dolorem ipsum quia 
+              dolor sit amet, consectetur, adipisci velit...</p>
+          </div>
+            <div class="study">
+            <h4>Ecole</h4>
+            <p>Neque porro quisquam est qui dolorem ipsum quia 
+              dolor sit amet, consectetur, adipisci velit...</p>
+          </div>
+          <div class="study">
+            <h4>Ecole</h4>
+            <p>Neque porro quisquam est qui dolorem ipsum quia 
+              dolor sit amet, consectetur, adipisci velit...</p>
+          </div>
+
       </div>
 
     </div>
