--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!doctype html>
 <html>
 <head>
-
+<meta charset="utf-8">
 <title> CV - Grégoire Bessagnet</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 
