change imag size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="left-box">
 
-      <img src="profile_pic.jpg" width="50%" alt="Grégoire Bessagnet">
+      <img src="profile_pic.jpg" width="100px" alt="Grégoire Bessagnet">
       <h2>Qui suis-je</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi accusamus officia 
         temporibus blanditiis tenetur ad hic consequatur dolorum repellendus harum? 
